@@ -39,6 +39,7 @@ dependencies = [
 dev = [
     "pytest",
     "numpy",
+    "polars",
     "pyyaml",
     "redis",
     ]
